--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,9 @@ body {
   color: var(--secondary-font-color);
   background-color: var(--modal-button-color);
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -112,57 +114,57 @@ body {
   letter-spacing: 0.03em;
   color: var(--secondary-font-color);
 }
-.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
-  visibility:hidden;
-  pointer-events:none;
+  visibility: visible;
+  pointer-events: none;
 }
-.is-hidden .modal-window {
-  transform: translate(-50%,-50%) scale(0.2) rotate(360deg);
+.backdrop.is-hidden .modal-window {
+  transform: translate(-50%, -50%) scale(0.2) rotate(360deg);
 }
 
 .backdrop {
   position: fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
-  transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
- .modal-window {
-   position: absolute;
-   top:50%;
-   left:50%;
-   transform: translate(-50%,-50%) scale(1) rotate(0);
-   width: 528px;
-   height: 581px;
-   background:var(--general-light-font-color);
-   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
-transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
- }
- .modal-btn-close {
-   display: flex;
-   padding:0;
-   position:absolute;
-   top:8px;
-   right: 8px;
-   width: 30px;
-   height: 30px;
-   justify-content: center;
-   align-items: center;
-   background-color: var(--general-light-font-color); 
-   border-width: 1px;
-   border-style: solid;
-   border-color: rgba(0, 0, 0, 0.1);
-   border-radius: 50%;
-
- }
- .modal-btn-close-icon {
-   fill: var(--general-dark-font-color);
- }
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1) rotate(0);
+  width: 528px;
+  height: 581px;
+  background: var(--general-light-font-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn-close {
+  display: flex;
+  padding: 0;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--general-light-font-color);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.modal-btn-close-icon {
+  fill: var(--general-dark-font-color);
+}
 
 /* =======END COMPONENTS */
 /* =======HEADER======== */
@@ -211,28 +213,26 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-font-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--accent-color);
 }
 .current {
-  position:relative;
+  position: relative;
   color: var(--accent-color);
 }
 .current::after {
-
   display: inline-block;
   position: absolute;
-  bottom:0;
-  left:0;
-  content: "";
+  bottom: 0;
+  left: 0;
+  content: '';
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color:var(--accent-color) ;
+  background-color: var(--accent-color);
 }
 
 .header-mail-link,
@@ -248,7 +248,6 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 
   color: var(--main-font-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .header-mail-link:hover,
 .header-mail-link:focus,
@@ -310,7 +309,6 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .hero-modal-btn:hover,
 .hero-modal-btn:focus {
@@ -373,34 +371,33 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: -30px;
 }
 .options-item {
-  position:relative;
+  position: relative;
   margin-left: 30px;
   flex-basis: calc((100%-90px) / 3);
 }
 .options-item::before {
   display: inline-block;
-  position:absolute;
-  bottom:0px;
-  left:0px;
-  content:"";
-  width:100%;
-  height:70px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  content: '';
+  width: 100%;
+  height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
-
 }
 .options-item-description {
-  position:absolute;
+  position: absolute;
   bottom: 27px;
   left: 50%;
   transform: translate(-50%, 0%);
   white-space: nowrap;
-  font-size:var(--main-font-size);
+  font-size: var(--main-font-size);
   font-weight: var(--secondary-font-weight);
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color:var(--general-light-font-color);
+  color: var(--general-light-font-color);
 }
 /* =====end what we do====== */
 
@@ -463,8 +460,8 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   border-radius: 50%;
   color: var(--icon-social-link-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-network-link:hover,
 .social-network-link:focus {
@@ -502,7 +499,8 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid var(--icon-social-link-color);
 
   color: var(--icon-social-link-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-link:hover,
 .customers-link:focus {
@@ -616,23 +614,23 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   flex-basis: calc(100% / 3 - 30px);
 }
 .galery-thumb {
-  position:relative;
+  position: relative;
   overflow: hidden;
 }
 .galery-content {
   position: absolute;
-  width:100%;
+  width: 100%;
   height: 100%;
-  padding:63px 24px;
-  top:0;
-  Left:0;
+  padding: 63px 24px;
+  top: 0;
+  left: 0;
   transform: translateY(100%);
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  color:var(--general-light-font-color);
+  color: var(--general-light-font-color);
   background-color: rgba(33, 150, 243, 0.9);
-  overflow:auto;
+  overflow: auto;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .galery-item-wrapper {
@@ -648,7 +646,7 @@ transition:transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .galery-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-  1px 4px 6px rgba(0, 0, 0, 0.16);
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .galery-link:hover .galery-content {
   transform: translateY(0%);
